[package]
name = "sqs"
version = "0.1.0"
authors = ["jerryo <jerry.oneal@samtec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.43.0"
rusoto_config = "0.43.0"
rusoto_sqs = "0.43.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
